Added a link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
   </head>
   <body>
     <h1>Welcome to Damascus</h1>
+    <footer>
+      This project was coded by
+      <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
+      <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank">open sourced</a>
+    </footer>
   </body>
 </html>
