Added subtitle to the homepage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <h1>Welcome to Damascus</h1>
+    <h2>Capital city of Syria</h2>
     <footer>
       This project was coded by
       <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
