--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <h1>Welcome to Damascus</h1>
-    <h2>Capital city of Syria</h2>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Damascus</h1>
+        <h2>Capital City of Syria</h2>
+        <a href="#more">Learn more</a>
+      </header>
+    </div>
     <footer>
       This project was coded by
       <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
