Added the footer

--- a/index.html
+++ b/index.html
@@ -22,9 +22,44 @@
       </header>
     </div>
     <footer>
-      This project was coded by
-      <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
-      <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank">open sourced</a>
+      <section class="grid">
+        <div>
+          <h3>More about Damascus</h3>
+          <ul>
+            <li>
+              <a href="https://www.damascus-airport.com/" target="_blank"
+                >Damascus Airport website</a
+              >
+            </li>
+            <li>
+              <a href="https://maps.app.goo.gl/7nExTmrAhxRzKUv2A" target="_blank"
+                >Map of Damascus</a
+              >
+            </li>
+            <li>
+              <a href="https://virtual-museum-syria.org/damascus/" target="_blank"
+                >Museum of Damascus</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            My name is Alaa and I am from Syria, City of Jasmin. I'm very fond of the city. I
+            created this page as a part of a project for SheCodes Responsive to develop my coding
+            skills.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            This project was coded by
+            <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
+            <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank">open sourced</a>
+          </p>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
