--- a/index.html
+++ b/index.html
@@ -20,46 +20,76 @@
         <h2>Capital City of Syria</h2>
         <a href="#more">Learn more</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img src="/images/DamasJasmine.jpeg" class="jas-pic" alt="Damascus Jasmine" />
+          </div>
+          <div>
+            <h2>why Damascus?</h2>
+            <h3>Damascus, the city of Jasmine</h3>
+            <p>
+              It is colloquially known in Syria as ash-Sham and titled the City of Jasmine. In
+              addition to being one of the oldest continuously inhabited cities in the world,
+              Damascus is a major cultural centre of the Levant and the Arab world. The city has an
+              estimated population of 1,711,000 as of 2009.
+            </p>
+            <p>
+              Why is Damascus known as the City of Jasmine?
+              <br />
+              Although the most fragrant of roses bears the name rosa damascena, Damascus rose, the
+              Syrian capital is known as Madinat Al Yasmine, the City of ­Jasmine. Each fall it
+              holds a festival in homage of this national flower, with people giving each other
+              stems of jasmine and decorating their home with fragrant blossoms. It was even held in
+              recent years, despite the conflict that left thousands dead and millions displaced,
+              with flowers given to those who lost loved ones.
+            </p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <section class="grid grid-3-columns">
+          <div>
+            <h3>More about Damascus</h3>
+            <ul>
+              <li>
+                <a href="https://www.damascus-airport.com/" target="_blank"
+                  >Damascus Airport website</a
+                >
+              </li>
+              <li>
+                <a href="https://maps.app.goo.gl/7nExTmrAhxRzKUv2A" target="_blank"
+                  >Map of Damascus</a
+                >
+              </li>
+              <li>
+                <a href="https://virtual-museum-syria.org/damascus/" target="_blank"
+                  >Museum of Damascus</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              My name is Alaa and I am from Syria, City of Jasmine. I'm very fond of the city. I
+              created this page as a part of a project for SheCodes Responsive to develop my coding
+              skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              This project was coded by
+              <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and
+              is
+              <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank"
+                >open sourced</a
+              >
+            </p>
+          </div>
+        </section>
+      </footer>
     </div>
-    <footer>
-      <section class="grid">
-        <div>
-          <h3>More about Damascus</h3>
-          <ul>
-            <li>
-              <a href="https://www.damascus-airport.com/" target="_blank"
-                >Damascus Airport website</a
-              >
-            </li>
-            <li>
-              <a href="https://maps.app.goo.gl/7nExTmrAhxRzKUv2A" target="_blank"
-                >Map of Damascus</a
-              >
-            </li>
-            <li>
-              <a href="https://virtual-museum-syria.org/damascus/" target="_blank"
-                >Museum of Damascus</a
-              >
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About me</h3>
-          <p>
-            My name is Alaa and I am from Syria, City of Jasmin. I'm very fond of the city. I
-            created this page as a part of a project for SheCodes Responsive to develop my coding
-            skills.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            This project was coded by
-            <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and is
-            <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank">open sourced</a>
-          </p>
-        </div>
-      </section>
-    </footer>
   </body>
 </html>
