Added cards to the landing page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Damascus</h1>
         <h2>Capital City of Syria</h2>
-        <a href="#more">Learn more</a>
+        <a href="https://en.wikipedia.org/wiki/Damascus#" target="_blank">Learn more</a>
       </header>
       <main>
         <section class="grid grid-2-columns">
           <div>
-            <img src="/images/DamasJasmine.jpeg" class="jas-pic" alt="Damascus Jasmine" />
+            <img src="/images/DamasJasmine.jpeg" alt="Damascus Jasmine" class="img-responsive" />
           </div>
           <div>
             <h2>why Damascus?</h2>
@@ -46,9 +46,103 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-center">Activities</h2>
+          <h3 class="text-center">My favorite activities in Damascus</h3>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img src="images/AlAzemPalace.jpeg" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Al Azem Palace</h4>
+                <p>
+                  The palace was built during the Ottoman era over the former site of a Mamluk
+                  palace as a residence for the governor of Damascus, As'ad Pasha al-Azm during the
+                  reign of Sultan Mahmud I. Serving as a joint residence and guesthouse, the palace
+                  was a monument to 18th-century Arab architecture. The palace was built by 800
+                  workers in a span of three years, and the building was decorated with highly
+                  sophisticated and expensive decorative elements.
+                </p>
+                <h5>Address:</h5>
+                <p>Al-Buzuriyah Souq</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Architecture is an excellent example of Damascene traditional houses. The
+                  structure consists of several buildings and three wings
+                </p>
+              </div>
+              <div class="card-footer">
+                <a href="https://en.wikipedia.org/wiki/Al-Azm_Palace" class="btn" target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img src="images/MountQasoun.jpeg" alt="Mount Qasioun" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Mount Qasioun</h4>
+                <p>
+                  Mount Qasioun is a mountain overlooking the city of Damascus, Syria. It has a
+                  range of restaurants, from which the whole city can be viewed. As the city has
+                  expanded over the years, some districts have been established at the foot of the
+                  mountain. Its highest point is 1,151 metres.
+                </p>
+                <h5>Address:</h5>
+                <p>Damascus</p>
+                <h5>What I like about it</h5>
+                <p>
+                  The term Qasioun might mean "hard and dry" in Syriac language, which is the
+                  characteristic of the bare rocky mountain that has no grass, greenery, or water.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a href="https://en.wikipedia.org/wiki/Al-Azm_Palace" class="btn" target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/khanAsaadBasha.jpeg"
+                  alt="Khan Asaad Pasha"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Khan As'ad Pasha</h4>
+                <p>
+                  Khan As'ad Pasha is the largest caravanserai in the Old City of Damascus, covering
+                  an area of 2,500 square metres. Situated along Al-Buzuriyah Souq, it was built and
+                  named after As'ad Pasha al-Azm, the governor of Damascus
+                </p>
+                <h5>Address:</h5>
+                <p>Al-Buzuriyah Souq</p>
+                <h5>What I like about it</h5>
+                <p>
+                  The design of the khan included eight small domes and one large central opening
+                  reminiscent of Persian architecture, while the eight domes reflect Shia tradition.
+                  The covered courtyard features a high ceiling height which helped provide
+                  protection from the climate during the hot summer and cold winter seasons
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://en.wikipedia.org/wiki/Khan_As%27ad_Pasha"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
-        <section class="grid grid-3-columns">
+        <section class="grid grid-3-columns-narrow">
           <div>
             <h3>More about Damascus</h3>
             <ul>
@@ -81,8 +175,10 @@
             <h3>About this website</h3>
             <p>
               This project was coded by
-              <a href="www.linkedin.com/in/alaa-helwani-hart3" target="_blank">Alaa Helwani</a> and
-              is
+              <a href="https://www.linkedin.com/in/alaa-helwani-hart3" target="_blank"
+                >Alaa Helwani</a
+              >
+              and is
               <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank"
                 >open sourced</a
               >
