Added responsive google maps embed

--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@
           <h3 class="text-center">My favorite activities in Damascus</h3>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
-                <img src="images/AlAzemPalace.jpeg" alt="" class="img-responsive" />
+              <div class="card-header grid grid-2-columns">
+                <img src="images/Alazem.jpg" alt="" class="img-responsive" />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6582266053797!2d36.30430797561467!3d33.51026814615379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1518e6d5fd6d92b7%3A0x65727c59b1d42367!2sAl%20Azem%20Palace!5e0!3m2!1sen!2sde!4v1715638389181!5m2!1sen!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Al Azem Palace</h4>
@@ -62,7 +70,7 @@
                   reign of Sultan Mahmud I. Serving as a joint residence and guesthouse, the palace
                   was a monument to 18th-century Arab architecture. The palace was built by 800
                   workers in a span of three years, and the building was decorated with highly
-                  sophisticated and expensive decorative elements.
+                  sophisticated and expensive decorative elements. And now it is the Museum of Arts.
                 </p>
                 <h5>Address:</h5>
                 <p>Al-Buzuriyah Souq</p>
@@ -79,8 +87,16 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
-                <img src="images/MountQasoun.jpeg" alt="Mount Qasioun" class="img-responsive" />
+              <div class="card-header grid grid-2-columns">
+                <img src="images/mount.jpg" alt="Mount Qasioun" class="img-responsive" />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13301.163201322832!2d36.27695736897443!3d33.54582005748306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1518e70c86c5ea19%3A0x89966f35f753f4fe!2sMount%20Qasioun!5e0!3m2!1sen!2sde!4v1715694191637!5m2!1sen!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Mount Qasioun</h4>
@@ -88,7 +104,9 @@
                   Mount Qasioun is a mountain overlooking the city of Damascus, Syria. It has a
                   range of restaurants, from which the whole city can be viewed. As the city has
                   expanded over the years, some districts have been established at the foot of the
-                  mountain. Its highest point is 1,151 metres.
+                  mountain. Its highest point is 1,151 metres. The mountain was heavily entrenched
+                  with Syrian government forces from the start of the Syrian Civil War, as it was a
+                  strategic site in the battle for the outskirts of Damascus.
                 </p>
                 <h5>Address:</h5>
                 <p>Damascus</p>
@@ -99,25 +117,30 @@
                 </p>
               </div>
               <div class="card-footer">
-                <a href="https://en.wikipedia.org/wiki/Al-Azm_Palace" class="btn" target="_blank"
+                <a href="https://en.wikipedia.org/wiki/Mount_Qasioun" class="btn" target="_blank"
                   >Learn more</a
                 >
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
-                <img
-                  src="images/khanAsaadBasha.jpeg"
-                  alt="Khan Asaad Pasha"
-                  class="img-responsive"
-                />
+              <div class="card-header grid grid-2-columns">
+                <img src="images/khan.jpg" alt="Khan Asaad Pasha" class="img-responsive" />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6969169321533!2d36.30413857631915!3d33.50926174620491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1518e6d5f4e6c22f%3A0xdd22394d0ba33768!2sKhan%20As&#39;ad%20Pasha%20Al-Azem!5e0!3m2!1sen!2sde!4v1715694387890!5m2!1sen!2sde"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Khan As'ad Pasha</h4>
                 <p>
                   Khan As'ad Pasha is the largest caravanserai in the Old City of Damascus, covering
                   an area of 2,500 square metres. Situated along Al-Buzuriyah Souq, it was built and
-                  named after As'ad Pasha al-Azm, the governor of Damascus
+                  named after As'ad Pasha al-Azm, the governor of Damascus. Khan As'ad Pasha has
+                  been described as one of the finest khans of Damascus.
                 </p>
                 <h5>Address:</h5>
                 <p>Al-Buzuriyah Souq</p>
