Added SEO to the landing page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="description" content="My name is Alaa and I am from Syria, City of Jasmine. I'm very fond of the city. I created this page as a part of a project for SheCodes Responsive to develop my coding skills.">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +19,7 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Damascus</h1>
         <h2>Capital City of Syria</h2>
-        <a href="https://en.wikipedia.org/wiki/Damascus#" target="_blank">Learn more</a>
+        <a href="https://en.wikipedia.org/wiki/Damascus#" title="Learn more about Damascus" target="_blank">Learn more</a>
       </header>
       <main>
         <section class="grid grid-2-columns">
@@ -52,7 +53,7 @@
           <div class="grid grid-3-columns">
             <div class="card">
               <div class="card-header grid grid-2-columns">
-                <img src="images/Alazem.jpg" alt="" class="img-responsive" />
+                <img src="images/Alazem.jpg" alt="Alazem Palace" class="img-responsive" />
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.6582266053797!2d36.30430797561467!3d33.51026814615379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1518e6d5fd6d92b7%3A0x65727c59b1d42367!2sAl%20Azem%20Palace!5e0!3m2!1sen!2sde!4v1715638389181!5m2!1sen!2sde"
                   class="embed"
@@ -81,7 +82,7 @@
                 </p>
               </div>
               <div class="card-footer">
-                <a href="https://en.wikipedia.org/wiki/Al-Azm_Palace" class="btn" target="_blank"
+                <a href="https://en.wikipedia.org/wiki/Al-Azm_Palace" class="btn" title="Learn more about AlAzem Palace" target="_blank"
                   >Learn more</a
                 >
               </div>
@@ -117,7 +118,7 @@
                 </p>
               </div>
               <div class="card-footer">
-                <a href="https://en.wikipedia.org/wiki/Mount_Qasioun" class="btn" target="_blank"
+                <a href="https://en.wikipedia.org/wiki/Mount_Qasioun" class="btn" title="Learn more about Mount Qasioun" target="_blank"
                   >Learn more</a
                 >
               </div>
@@ -156,6 +157,7 @@
                 <a
                   href="https://en.wikipedia.org/wiki/Khan_As%27ad_Pasha"
                   class="btn"
+                  title="Learn more about Khan asaad Pasha"
                   target="_blank"
                   >Learn more</a
                 >
@@ -950,17 +952,17 @@
             <h3>More about Damascus</h3>
             <ul>
               <li>
-                <a href="https://www.damascus-airport.com/" target="_blank"
+                <a href="https://www.damascus-airport.com/" title="Damascus Airport website" target="_blank"
                   >Damascus Airport website</a
                 >
               </li>
               <li>
-                <a href="https://maps.app.goo.gl/7nExTmrAhxRzKUv2A" target="_blank"
+                <a href="https://maps.app.goo.gl/7nExTmrAhxRzKUv2A" title="Damascus Map" target="_blank"
                   >Map of Damascus</a
                 >
               </li>
               <li>
-                <a href="https://virtual-museum-syria.org/damascus/" target="_blank"
+                <a href="https://virtual-museum-syria.org/damascus/" title="Museum of Damascus" target="_blank"
                   >Museum of Damascus</a
                 >
               </li>
@@ -978,11 +980,11 @@
             <h3>About this website</h3>
             <p>
               This project was coded by
-              <a href="https://www.linkedin.com/in/alaa-helwani-hart3" target="_blank"
+              <a href="https://www.linkedin.com/in/alaa-helwani-hart3" title="Alaa Helwani linkedin Profile" target="_blank"
                 >Alaa Helwani</a
               >
               and is
-              <a href="https://github.com/Alaa-3/Damas-Final-Project" target="_blank"
+              <a href="https://github.com/Alaa-3/Damas-Final-Project" title="Alaa Helwani GitHub" target="_blank"
                 >open sourced</a
               >
             </p>
